@@ -31,7 +31,6 @@ import java.nio.file.FileSystemNotFoundException;
 import java.nio.file.FileSystems;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Enumeration;
 import java.util.List;
@@ -41,9 +40,9 @@ import java.util.function.Predicate;
 import java.util.logging.Level;
 import java.util.logging.LogRecord;
 import java.util.spi.ToolProvider;
-import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.condition.DisabledIf;
 import org.junit.jupiter.api.fixtures.TrackLogRecords;
 import org.junit.jupiter.api.io.TempDir;
 import org.junit.platform.commons.PreconditionViolationException;
@@ -301,8 +300,8 @@ class DefaultClasspathScannerTests {
 			uriOf("/org/junit/platform/commons/other-example.resource"));
 	}
 
-	@Test
-	// #2500
+	@Test // #2500
+	@DisabledIf("runningInEclipse")
 	void scanForClassesInPackageWithinModulesSharingNamePrefix(@TempDir Path temp) throws Exception {
 		var moduleSourcePath = Path.of(getClass().getResource("/modules-2500/").toURI()).toString();
 		run("javac", "--module", "foo,foo.bar", "--module-source-path", moduleSourcePath, "-d", temp.toString());
@@ -335,12 +334,12 @@ class DefaultClasspathScannerTests {
 			ReflectionUtils::tryToLoadClass);
 		{
 			var classes = classpathScanner.scanForClassesInPackage("foo", allClasses);
-			var classNames = classes.stream().map(Class::getName).collect(Collectors.toList());
+			var classNames = classes.stream().map(Class::getName).toList();
 			assertThat(classNames).hasSize(2).contains("foo.Foo", "foo.bar.FooBar");
 		}
 		{
 			var classes = classpathScanner.scanForClassesInPackage("foo.bar", allClasses);
-			var classNames = classes.stream().map(Class::getName).collect(Collectors.toList());
+			var classNames = classes.stream().map(Class::getName).toList();
 			assertThat(classNames).hasSize(1).contains("foo.bar.FooBar");
 		}
 	}
@@ -442,12 +441,14 @@ class DefaultClasspathScannerTests {
 		}
 	}
 
+	@SuppressWarnings({ "DataFlowIssue", "NullAway" })
 	@Test
 	void scanForClassesInPackageForNullBasePackage() {
 		assertThrows(PreconditionViolationException.class,
 			() -> classpathScanner.scanForClassesInPackage(null, allClasses));
 	}
 
+	@SuppressWarnings({ "DataFlowIssue", "NullAway" })
 	@Test
 	void scanForResourcesInPackageForNullBasePackage() {
 		assertThrows(PreconditionViolationException.class,
@@ -466,6 +467,7 @@ class DefaultClasspathScannerTests {
 			() -> classpathScanner.scanForResourcesInPackage("    ", allResources));
 	}
 
+	@SuppressWarnings({ "DataFlowIssue", "NullAway" })
 	@Test
 	void scanForClassesInPackageForNullClassFilter() {
 		assertThrows(PreconditionViolationException.class,
@@ -549,6 +551,7 @@ class DefaultClasspathScannerTests {
 		assertTrue(classes.contains(DefaultClasspathScannerTests.class));
 	}
 
+	@SuppressWarnings({ "DataFlowIssue", "NullAway" })
 	@Test
 	void findAllClassesInClasspathRootForNullRoot() {
 		assertThrows(PreconditionViolationException.class,
@@ -558,9 +561,10 @@ class DefaultClasspathScannerTests {
 	@Test
 	void findAllClassesInClasspathRootForNonExistingRoot() {
 		assertThrows(PreconditionViolationException.class,
-			() -> classpathScanner.scanForClassesInClasspathRoot(Paths.get("does_not_exist").toUri(), allClasses));
+			() -> classpathScanner.scanForClassesInClasspathRoot(Path.of("does_not_exist").toUri(), allClasses));
 	}
 
+	@SuppressWarnings({ "DataFlowIssue", "NullAway" })
 	@Test
 	void findAllClassesInClasspathRootForNullClassFilter() {
 		assertThrows(PreconditionViolationException.class,
@@ -624,6 +628,14 @@ class DefaultClasspathScannerTests {
 		public Enumeration<URL> getResources(String name) throws IOException {
 			throw new IOException("Demo I/O error");
 		}
+	}
+
+	/**
+	 * Determine if the current code is running in the Eclipse IDE.
+	 */
+	static boolean runningInEclipse() {
+		return StackWalker.getInstance().walk(
+			stream -> stream.anyMatch(stackFrame -> stackFrame.getClassName().startsWith("org.eclipse.jdt")));
 	}
 
 }
